# swift-syntax

./: BUILD.bazel  Package.swift
Sources/: CMakeLists.txt
Sources/SwiftCompilerPlugin/: CompilerPlugin.swift
Sources/SwiftCompilerPluginMessageHandling/: CMakeLists.txt  Diagnostics.swift  Macros.swift  PluginMacroExpansionContext.swift
Sources/SwiftIDEUtils/: NameMatcher.swift
Sources/SwiftOperators/: CMakeLists.txt  OperatorError+Diagnostics.swift
Sources/SwiftParser/: CMakeLists.txt
Sources/SwiftParserDiagnostics/: CMakeLists.txt  DiagnosticExtensions.swift  LexerDiagnosticMessages.swift  MissingNodesError.swift  MissingTokenError.swift  ParseDiagnosticsGenerator.swift  ParserDiagnosticMessages.swift  SyntaxExtensions.swift
Sources/SwiftRefactor/: ExpandEditorPlaceholder.swift  MigrateToNewIfLetSyntax.swift
Sources/SwiftSyntax/: SyntaxArena.swift
Sources/SwiftSyntax/Documentation.docc/: Working with SwiftSyntax.md
Sources/SwiftSyntax/SwiftBasicFormat/: BasicFormat.swift  InferIndentation.swift  Syntax+Extensions.swift  SyntaxProtocol+Formatted.swift  Trivia+FormatExtensions.swift
Sources/SwiftSyntaxBuilder/: CMakeLists.txt  ConvenienceInitializers.swift  Syntax+StringInterpolation.swift  SyntaxParsable+ExpressibleByStringInterpolation.swift  ValidatingSyntaxNodes.swift
Sources/SwiftSyntaxMacroExpansion/: BasicMacroExpansionContext.swift  CMakeLists.txt  MacroArgument.swift  MacroExpansion.swift  MacroReplacement.swift  MacroSystem.swift
Sources/SwiftSyntaxMacros/: MacroExpansionContext.swift  MacroExpansionDiagnosticMessages.swift
Sources/SwiftSyntaxMacrosTestSupport/: Assertions.swift
Sources/_SwiftSyntaxTestSupport/: IncrementalParseTestUtils.swift  SyntaxProtocol+Initializer.swift
Tests/SwiftBasicFormatTest/: BasicFormatTests.swift  InferIndentationTests.swift
Tests/SwiftDiagnosticsTest/: DiagnosticTestingUtils.swift  GroupDiagnosticsFormatterTests.swift  ParserDiagnosticsFormatterIntegrationTests.swift
Tests/SwiftParserDiagnosticsTest/: DiagnosticInfrastructureTests.swift
Tests/SwiftParserTest/: Assertions.swift  DeclarationTests.swift
Tests/SwiftRefactorTest/: CallToTrailingClosureTests.swift  ExpandEditorPlaceholderTests.swift  RefactorTestUtils.swift
Tests/SwiftSyntaxBuilderTest/: FunctionTests.swift  StringInterpolationTests.swift
Tests/SwiftSyntaxMacroExpansionTest/: AccessorMacroTests.swift  BodyMacroTests.swift  CodeItemMacroTests.swift  DeclarationMacroTests.swift  ExtensionMacroTests.swift  MacroArgumentTests.swift  MacroReplacementTests.swift  MemberAttributeMacroTests.swift  MemberMacroTests.swift  PeerMacroTests.swift  PreambleMacroTests.swift  StringInterpolationErrorTests.swift
Tests/SwiftSyntaxMacrosTestSupportTests/: AssertionsTests.swift
(+48 files in other folders)
